# clarity-api

./: .bumpversion.cfg  .dockerignore  .env.example  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  a2a.json  connector_manifest.yml  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  sitemap.xml
.specify/specs/code-enhancement-20260610/: spec.json  spec.md  tasks.json  tasks.md
clarity_api/: __init__.py  __main__.py  agent_server.py  api_client.py  auth.py  clarity_api.py  clarity_models.py  decorators.py  exceptions.py  kg_ingest.py  main_agent.json  mcp_server.py  models.py  version.py
clarity_api/agent_data/: IDENTITY.md
clarity_api/api/: __init__.py  api_client_base.py  api_client_insights.py
clarity_api/connectors/: mcp_source_presets.json  tool_schema_fingerprints.json
clarity_api/mcp/: __init__.py  mcp_insights.py
clarity_api/ontology/: __init__.py  certification.json  clarity.ttl
clarity_api/ontology/fixtures/: records.json
clarity_api/ontology/mappings/: source.yaml
clarity_api/ontology/migrations/: manifest.json
clarity_api/ontology/shapes/: connector.shacl.ttl
clarity_api/prompts/: analytics_specialist.json  main_agent.json
clarity_api/services/: __init__.py  insights_service.py
clarity_api/skills/clarity-analytics-ingestion/: SKILL.md  WORKFLOW.md
clarity_api/skills/clarity-api-operations/: SKILL.md
clarity_api/skills/clarity-api-operations/agents/: openai.yaml
clarity_api/skills/clarity-api-operations/references/: catalog.md
clarity_api/skills/clarity-behavioral-insights/: SKILL.md  WORKFLOW.md
clarity_api/skills/clarity-starter/: SKILL.md
concepts/: index.html
configuration/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  overview.md  usage.md
installation/: index.html
overview/: index.html
scripts/: verify_api_integration.py
search/: search_index.json
test/: test_clarity_api.py  test_clarity_models.py
tests/: conftest.py  test_api_client.py  test_auth.py  test_clarity_api.py  test_clarity_models.py  test_concept_parity.py  test_init_dynamics.py  test_kg_ingest.py  test_mcp_registration.py  test_startup.py
tests/integration/: test_data_export_integration.py
tests/unit/: test_api_client.py  test_auth.py  test_clarity_api.py  test_clarity_models.py  test_concept_parity.py  test_errors.py  test_init_dynamics.py  test_insights_service.py  test_mcp_registration.py  test_startup.py
usage/: index.html
